2012-02-25 Stanislas Rolland  <typo3@sjbr.ca>
	* fix regression on security issue: Information (and password) Disclosure in extension sr_feuser_register (Thanks to Franz Holzinger)

2012-02-24 Franz Holzinger  <franz@ttproducts.de>
	* add more parameters to the hooks for registrationProcess_afterSaveCreate, registrationProcess_afterSaveCreate and evalValues

2012-02-22 Stanislas Rolland  <typo3@sjbr.ca>
	* fix security issue: Information (and password) Disclosure in extension sr_feuser_register
	* fix security issue: sr_feuser_register: "edit account" page contains cleartext password in HTML source

2012-01-19 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #17137: store the token together with the user data before a setfixed command is executed

2012-01-18 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18019: Incorrect login URL code

2012-01-16 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18083: Parser error on eval() in getShortUrl()

2012-01-16 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18364: Initialize $prefixId in method tx_srfeuserregister_display::editForm

2012-01-13 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #14416: Missing break in switch after preg

2012-01-13 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #18343: replace deprecated t3lib_div::intInRange by t3lib_utility_Math::forceIntegerInRange
	* replace deprecated t3lib_div::testInt by t3lib_utility_Math::canBeInterpretedAsInteger

2011-11-24 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: do not use the deprecated function t3lib_div::int_from_ver for TYPO3 4.6 and later

2011-11-16 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: use the new method getLL_fh002 which supports TYPO3 4.6

2011-11-15 Franz Holzinger  <franz@ttproducts.de>
	* fix bug in implode for the field list of DBgetUpdate

2011-11-15 Franz Holzinger  <franz@ttproducts.de>
	* restructuring and CGL

2011-11-15 Franz Holzinger  <franz@ttproducts.de>